Set CSS overflow to 'scroll' to prevent page layout jumping upon navigation.

--- a/css/layout.css
+++ b/css/layout.css
@@ -17,6 +17,10 @@
 /* #Site Styles
 ================================================== */
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	background-color: white;
 }
